--- a/mailserver/roles/mailserver/templates/main.cf.j2
+++ b/mailserver/roles/mailserver/templates/main.cf.j2
@@ -18,5 +18,19 @@ virtual_mailbox_base = /mail
 virtual_uid_maps = static:5000
 virtual_gid_maps = static:5000
 
-# TODO: add TLS
+# TLS
+smtpd_tls_cert_file=/etc/ssl/certs/ssl-cert-snakeoil.pem
+smtpd_tls_key_file=/etc/ssl/private/ssl-cert-snakeoil.key
+smtpd_use_tls=yes
+smtpd_tls_session_cache_database = btree:${data_directory}/smtpd_scache
+smtp_tls_session_cache_database = btree:${data_directory}/smtp_scache
+smtpd_tls_security_level = may
+smtpd_tls_auth_only = yes
+smtpd_tls_loglevel = 1
+
+# See /usr/share/doc/postfix/TLS_README.gz in the postfix-doc package for
+# information on enabling SSL in the smtp client.
+
+#smtpd_recipient_restrictions = reject_invalid_hostname, reject_non_fqdn_STUFF, reject_unknown_STUFF, permit_mynetworks, permit_sasl_authenticated, reject_unauth_destination
+
 
