--- a/mailserver/roles/mailserver/templates/main.cf.j2
+++ b/mailserver/roles/mailserver/templates/main.cf.j2
@@ -1,7 +1,7 @@
 # full DNS name of the server
 # ex. mx.mybusiness.com
 myhostname = {{mail_hostname}}
-mydomain = $myhostname
+mydomain = {{mail_domain}}
 myorigin = $mydomain
 unknown_local_recipient_reject_code = 550
 mydestination = $myhostname, localhost
@@ -9,14 +9,6 @@ mydestination = $myhostname, localhost
 mynetworks = 127.0.0.0/8 [::ffff:127.0.0.0]/104 [::1]/128
 relay_domains =
 relayhost =
-
-# Virtual domains
-virtual_mailbox_domains = /etc/postfix/vhosts.map
-virtual_mailbox_maps = hash:/etc/postfix/vmailboxes.map
-virtual_alias_maps = hash:/etc/postfix/valias.map
-virtual_mailbox_base = /mail
-virtual_uid_maps = static:5000
-virtual_gid_maps = static:5000
 
 # TLS
 smtpd_tls_cert_file=/etc/ssl/certs/ssl-cert-snakeoil.pem
