more mailserver stuff

--- a/mailserver/roles/mailserver/templates/main.cf.j2
+++ b/mailserver/roles/mailserver/templates/main.cf.j2
@@ -1,5 +1,6 @@
 # full DNS name of the server
 # ex. mx.mybusiness.com
+
 myhostname = {{mail_hostname}}
 mydomain = {{mail_domain}}
 myorigin = $mydomain
@@ -10,6 +11,18 @@ mynetworks = 127.0.0.0/8 [::ffff:127.0.0.0]/104 [::1]/128
 relay_domains =
 relayhost =
 
+append_dot_mydomain = no
+
+readme_directory = no
+
+alias_maps = hash:/etc/aliases
+alias_database = hash:/etc/aliases
+
+recipient_delimiter = +
+mailbox_size_limit = 0
+
+inet_interfaces = all
+
 # TLS
 smtpd_tls_cert_file=/etc/ssl/certs/ssl-cert-snakeoil.pem
 smtpd_tls_key_file=/etc/ssl/private/ssl-cert-snakeoil.key
@@ -18,7 +31,19 @@ smtpd_tls_session_cache_database = btree:${data_directory}/smtpd_scache
 smtp_tls_session_cache_database = btree:${data_directory}/smtp_scache
 smtpd_tls_security_level = may
 smtpd_tls_auth_only = yes
-smtpd_tls_loglevel = 1
+smtpd_tls_loglevel = 
+
+#smtpd_client_restrictions = permit_mynetworks, reject
+smtpd_helo_restrictions = reject_unknown_helo_hostname
+smtpd_sender_restrictions = reject_unknown_sender_domain
+smtpd_recipient_restrictions = permit_mynetworks,
+    permit_sasl_authenticated,
+    reject_unauth_destination
+
+# reject clients that speak too early
+smtpd_data_restrictions = reject_unauth_pipelining
+
+
 
 # See /usr/share/doc/postfix/TLS_README.gz in the postfix-doc package for
 # information on enabling SSL in the smtp client.
