--- a/mailserver/roles/mailserver/templates/main.cf.j2
+++ b/mailserver/roles/mailserver/templates/main.cf.j2
@@ -11,6 +11,7 @@ mynetworks = 127.0.0.0/8 [::ffff:127.0.0.0]/104 [::1]/128
 relay_domains =
 relayhost =
 
+biff = no
 append_dot_mydomain = no
 
 readme_directory = no
@@ -20,30 +21,41 @@ alias_database = hash:/etc/aliases
 
 recipient_delimiter = +
 mailbox_size_limit = 0
+# accept messages up to 50MB
+message_size_limit = 51200000
 
 inet_interfaces = all
 
 # TLS
 smtpd_tls_cert_file=/etc/ssl/certs/ssl-cert-snakeoil.pem
 smtpd_tls_key_file=/etc/ssl/private/ssl-cert-snakeoil.key
-smtpd_use_tls=yes
 smtpd_tls_session_cache_database = btree:${data_directory}/smtpd_scache
 smtp_tls_session_cache_database = btree:${data_directory}/smtp_scache
 smtpd_tls_security_level = may
 smtpd_tls_auth_only = yes
-smtpd_tls_loglevel = 
+smtpd_tls_loglevel = 2
 
 #smtpd_client_restrictions = permit_mynetworks, reject
-smtpd_helo_restrictions = reject_unknown_helo_hostname
-smtpd_sender_restrictions = reject_unknown_sender_domain
+smtpd_helo_restrictions = permit_mynetworks, reject_invalid_hostname
+smtpd_sender_restrictions = reject_unknown_address
 smtpd_recipient_restrictions = permit_mynetworks,
     permit_sasl_authenticated,
-    reject_unauth_destination
+    reject_unauth_pipelining,
+    reject_unauth_destination,
+    reject_invalid_hostname,
+    reject_non_fqdn_hostname,
+    reject_non_fqdn_recipient,
+    reject_unknown_recipient_domain,
+    permit
 
 # reject clients that speak too early
 smtpd_data_restrictions = reject_unauth_pipelining
 
-
+smtpd_sasl_type = dovecot
+smtpd_sasl_path = private/auth
+smtpd_sasl_auth_enable = yes
+broken_sasl_auth_clients = yes
+smtpd_sasl_security_options = noanonymous
 
 # See /usr/share/doc/postfix/TLS_README.gz in the postfix-doc package for
 # information on enabling SSL in the smtp client.
