--- a/mailserver/roles/mailserver/templates/main.cf.j2
+++ b/mailserver/roles/mailserver/templates/main.cf.j2
@@ -26,6 +26,8 @@ message_size_limit = 51200000
 
 inet_interfaces = all
 
+mailbox_command = /usr/lib/dovecot/dovecot-lda -f "$SENDER" -a "$RECIPIENT"
+
 # TLS
 smtpd_tls_cert_file=/etc/ssl/certs/ssl-cert-snakeoil.pem
 smtpd_tls_key_file=/etc/ssl/private/ssl-cert-snakeoil.key
